--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,13 @@
-<h1>Create a new Review</h1>
+<div class="container pt-3">
 
-<%= simple_form_for [@restaurant, @review] do |f| %>
-  <%= f.input :content %>
-  <%= f.input :rating %>
-  <%= f.submit %>
-<% end %>
+    <div class="d-flex justify-content-between">
+    <div><h1 class="pt-2">Create a new Review</h1></div>
+    <div><%= link_to "Back to all restaurants", restaurants_path, class: "btn btn-primary mb-4 mt-3" %></div>
+    </div>
+  <%= simple_form_for [@restaurant, @review] do |f| %>
+    <%= f.input :content %>
+    <%= f.input :rating %>
+    <%= f.submit %>
+  <% end %>
+
+</div>
